[package]
name = "marty_pixels_wasm32_player"
version = "0.1.3"
edition = "2021"
license = "MIT"

[lib]
name = "marty_pixels_wasm32_player"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
marty_core = { path = "../../core/"}
videocard_renderer = { path = "../../lib/frontend/videocard_renderer" }
marty_pixels_scaler = { path = "../../lib/frontend/marty_scaler_wgpu" }

bytemuck = "1.13.1"
cpal = "0.13.5"
egui = "0.22"
emath = "0.20"
egui-wgpu = "0.22"
egui-winit = { version = "0.22", default-features = false, features = ["links"] }
#env_logger = "0.9"
image = { version = "0.24.2", default-features = false, features = ["png"] }
log = "0.4"
pixels = "0.13"
rand = "0.8.5"
getrandom = { version = "0.2.6", features = ["js"] }
regex = "1.5.5"
resize = "0.7.4"
rgb = "0.8.33"
serialport = "4.2.0"
winit = "0.29.4"
winit_input_helper = "0.14"

[target.'cfg(target_arch = "wasm32")'.dependencies]
marty_web_helpers = { path = "../../lib/frontend/marty_web_helpers" }
wgpu = { version = "0.16", features = ["webgl"] }
error-iter = "0.4"
console_error_panic_hook = "0.1"
console_log = "0.2"
#futures = "0.3.28"
js-sys = "0.3.63"
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["GpuTextureFormat", "Request", "RequestInit", "Response", "Headers", "Blob", "FileReader", "ProgressEvent"] }
instant = "0.1.12"
cpal = { version = "0.13.5", features = ["wasm-bindgen"]}

[features]
devtools=[]