[package]
name = "marty_common"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "marty_common"
path = "src/lib.rs"
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
web-time.workspace = true