[package]
name = "martypc_eframe"
description = "A frontend for the MartyPC emulator, using eframe."
version.workspace = true
authors.workspace = true
edition.workspace = true
include = ["LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.81"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[[bin]]
name = "martypc"
path = "src/main.rs"
test = false
bench = false

[dependencies]
# Required Dependencies
# ---------------------------------------------------------------------------------------------------------------------
# Internal crates
# --------------
marty_core = { path = "../../marty_core", default-features = false, features = ["sound"] }
marty_config = { path = "../../lib/frontend/marty_config", default-features = false, features = ["use_display"]}
display_manager_eframe = { path = "../../lib/frontend/display_manager_eframe" }
marty_videocard_renderer = { path = "../../lib/frontend/marty_videocard_renderer" }
marty_egui = { path = "../../lib/frontend/marty_egui", default-features = false }
marty_egui_eframe = { path = "../../lib/frontend/marty_egui_eframe" }
marty_frontend_common =  { path = "../../lib/frontend/marty_frontend_common", features = ["use_url", "use_egui"]}
marty_display_common = { path = "../../lib/frontend/marty_display_common" }
marty_web_helpers = { path = "../../lib/frontend/marty_web_helpers" }

# External crates
# ----------------
fluxfox = { workspace = true, features = ["core", "viz", "tiny_skia", "fat", "ibm_pc"] }
fluxfox_egui = { workspace = true }
# We need winit separately from eframe for raw input support
winit = { workspace = true }
#winit = { version = "0.30", default-features = false }
egui = { workspace = true, default-features = false }
eframe = { workspace = true, default-features = false }
egui_extras = { workspace = true, default-features = false, features = ["file", "image"] }
web-time = { workspace = true }
log.workspace = true
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel.workspace = true
anyhow.workspace = true
strum.workspace = true
# url is used for the wasm build to be configured via url and fetch resources.
# it is not optional as we may want to fetch things from the web from native, in the future.
url = "2.5"
thiserror.workspace = true
rfd.workspace = true

# Optional Dependencies
# ---------------------------------------------------------------------------------------------------------------------
rodio = {  workspace = true, optional = true }
# gilrs is used to provide gamepad support
#gilrs = { version = "0.11", default-features = false, features = ["xinput"], optional = true }
gilrs = { workspace = true, optional = true }
# wgpu is used if the `use_wgpu` feature is enabled.
wgpu = { workspace = true, optional = true }
egui_commonmark = { workspace = true, optional = true }

# Native build dependencies
# ---------------------------------------------------------------------------------------------------------------------
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
egui-winit = { workspace = true, default-features = true, features = ["accesskit"]}
eframe = { workspace = true, default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # Add wayland support for Linux/CI
]}
serialport  = { workspace = true }
# enable bpaf since we have a command line
marty_config = { path = "../../lib/frontend/marty_config", features = ["use_bpaf"] }
# async runtime
async-std = { version = "1.10", features = ["attributes"] }

# Enable DX12 backend on windows
[target.'cfg(target_os = "windows")'.dependencies]
wgpu = { version = "23.0", features = ["dx12"], optional = true }

# Wasm dependencies
# ---------------------------------------------------------------------------------------------------------------------
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
#fwasm-bindgen-rayon = "1.3"
web-sys.workspace = true
getrandom = { workspace = true, features = ["wasm_js"]}
glow = { workspace = true }
egui-winit = { workspace = true, default-features = false, optional = true }
# No need for accesskit or wayland on web.
eframe = { workspace = true, default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "persistence",   # Enable restoring app state when restarting the app.
]}

# Disable bpaf on web - no command line!
marty_config = { path = "../../lib/frontend/marty_config", default-features = false }

# Build dependencies
# ---------------------------------------------------------------------------------------------------------------------
[build-dependencies]
winres = "0.1"

[features]
default = ["all_video_cards", "use_winit", "use_wgpu", "use_gilrs", "sound", "opl"]
wasm_glow = ["all_video_cards","sound","use_glow","use_gilrs"]
wasm_wgpu = ["all_video_cards","sound","use_wgpu","use_gilrs"]
shader_ui = ["marty_egui/scaler_ui"]
all_video_cards = ["ega", "vga"]
sound = ["dep:rodio", "rodio/wasm-bindgen", "marty_core/sound"]
# Enable markdown support. This is used to show disk image metadata and documentation.
markdown = ["dep:egui_commonmark", "marty_egui/markdown"]
# Use winit (disabled for wasm builds)
use_winit = ["dep:egui-winit"]
# Use the wgpu backend
use_wgpu = [
    "eframe/wgpu",
    "marty_frontend_common/use_wgpu",
    "marty_display_common/use_wgpu",
    "display_manager_eframe/use_wgpu",
    "marty_egui/scaler_ui",
    "marty_egui/scaler_params"
]
# Use the glow backend
use_glow = ["eframe/glow", "display_manager_eframe/use_glow", "marty_egui/scaler_ui"]
# Use serialport
use_serialport = ["marty_core/serial", "marty_egui/use_serialport", "marty_egui_eframe/use_serialport"]
# Use gilrs for gamepads
use_gilrs = ["dep:gilrs", "marty_frontend_common/use_gilrs"]
# Enable UI for internal development tooling. This is not intended for end-users. No support!
devtools = ["marty_egui/devtools"]
arduino_validator = ["marty_core/arduino_validator"]
cpu_validator = ["marty_core/cpu_validator"]
ega = ["marty_core/ega", "marty_frontend_common/ega", "marty_videocard_renderer/ega"]
vga = ["marty_core/vga", "marty_frontend_common/vga", "marty_videocard_renderer/vga"]
opl = ["marty_core/opl"]
# enable dev stuff, including logging in release.
# !! Warning, may be unstable or completely broken !!
devmode = ["marty_core/cpu_trace_comments"]
