[package]
name = "display_backend_eframe"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "display_backend_eframe"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
display_backend_trait = { path = "../display_backend_trait" }
videocard_renderer = { path = "../../frontend/videocard_renderer" }
#display_scaler_trait = { path = "../../frontend/display_scaler_trait" }
marty_egui = { path = "../../frontend/marty_egui" }
eframe = { version = "0.30", default-features = false, features = ["default_fonts", "wgpu", "persistence"] }

winit.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true

null_scaler = { path = "../../frontend/null_scaler" }

# Optional Dependencies
# ---------------------------------------------------------------------------------------------------------------------
