[package]
name = "display_backend_eframe"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "display_backend_eframe"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
display_backend_trait = { path = "../display_backend_trait" }
egui.workspace = true
egui-wgpu.workspace = true
anyhow.workspace = true

null_scaler = { path = "../../frontend/null_scaler" }

# Optional Dependencies
# ---------------------------------------------------------------------------------------------------------------------
