[package]
name = "display_backend_pixels"
version = "0.2.0"
edition = "2021"

[lib]
name = "display_backend_pixels"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
display_backend_trait = { path = "../display_backend_trait" }
videocard_renderer = { path = "../../frontend/videocard_renderer" }
#display_scaler_trait = { path = "../../frontend/display_scaler_trait" }
marty_pixels_scaler = { path = "../../frontend/marty_scaler_wgpu" }
marty_egui = { path = "../../frontend/marty_egui" }
pixels.workspace = true
winit.workspace = true
thiserror = "1.0"
anyhow = "1.0"
log = "0.4.20"