[package]
name = "display_backend_wgpu"
authors = [""]
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "display_backend_wgpu"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
wgpu_wrapper = { path = "../wgpu_wrapper" }
display_backend_trait = { path = "../display_backend_trait" }
videocard_renderer = { path = "../../frontend/videocard_renderer" }
#display_scaler_trait = { path = "../../frontend/display_scaler_trait" }
marty_pixels_scaler = { path = "../../frontend/marty_scaler_wgpu" }
marty_egui = { path = "../../frontend/marty_egui" }
winit.workspace = true
thiserror = "1.0"
anyhow = "1.0"
log = "0.4.20"