[package]
name = "config_toml_bpaf"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "config_toml_bpaf"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
marty_common = { path = "../../common" }
marty_core = { path = "../../../core" }
frontend_common = { path = "../frontend_common" }
log = "0.4"
anyhow = "1.0.58"
bpaf = { version = "0.7.7", features = ["derive"] }
toml.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_derive.workspace = true