[package]
name = "display_manager_eframe"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "display_manager_eframe"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
marty_common = { path = "../../common" }
marty_core = { path = "../../../core" }
marty_egui = { path = "../marty_egui" }
marty_egui_eframe = { path = "../../frontend/marty_egui_eframe" }

frontend_common = { path = "../frontend_common", features = ["use_wgpu"] }
display_backend_eframe = { path = "../../backend/display_backend_eframe" }
marty_pixels_scaler = { path = "../marty_scaler_wgpu" }
videocard_renderer = { path = "../videocard_renderer" }

eframe = { version = "0.30", default-features = false, features = ["default_fonts", "wgpu"] }
winit.workspace = true
anyhow.workspace = true
image.workspace = true
log.workspace = true