[package]
name = "display_manager_eframe"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "display_manager_eframe"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
marty_common = { path = "../../common" }
marty_core = { path = "../../../core", default-features = false }
marty_egui = { path = "../marty_egui" }
marty_egui_eframe = { path = "../../frontend/marty_egui_eframe" }

frontend_common = { path = "../frontend_common", features = ["use_wgpu"] }
display_backend_eframe = { path = "../../backend/display_backend_eframe" }
videocard_renderer = { path = "../videocard_renderer" }
eframe = { version = "0.30", default-features = false, features = ["default_fonts"] }
winit.workspace = true
anyhow.workspace = true
image.workspace = true
log.workspace = true

null_scaler = { path = "../null_scaler" }

# Optional Dependencies
# ---------------------------------------------------------------------------------------------------------------------
marty_pixels_scaler = { path = "../marty_scaler_wgpu", optional = true }

[features]
use_wgpu = ["eframe/wgpu", "marty_pixels_scaler"]
use_glow = []