[package]
name = "display_scaler_trait"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "display_scaler_trait"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu.workspace = true
serde = { version = "1.0.166", features = ["derive"] }

[dependencies.pixels]
git = "https://github.com/dbalsom/pixels_martypc.git"
branch = "marty_update_deps"