[package]
name = "frontend_common"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "frontend_common"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
marty_common = { path = "../../common" }
display_backend_trait = { path = "../../backend/display_backend_trait" }
videocard_renderer = { path = "../videocard_renderer" }
#marty_color = { path = "../marty_color" }
marty_core = { path = "../../../core" }
anyhow.workspace = true
serde.workspace = { workspace = true, features = ["derive"] }
# feature dependencies:
wgpu = { workspace = true, optional = true }
pixels = { workspace = true, optional = true }

[features]
use_wgpu = ["wgpu", "pixels"]