[package]
name = "marty_egui"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "marty_egui"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
frontend_common = { path = "../frontend_common", features=["use_wgpu"] }
marty_common = { path = "../../common" }
marty_core = { path = "../../../core" }
videocard_renderer = { path = "../videocard_renderer" }
winit.workspace = true
pixels.workspace = true
#egui = "0.24"
#egui-wgpu = "0.24"
#egui-winit = { version = "0.24", default-features = false, features = ["links"] }
#egui_extras = { version = "*", features = ["all_loaders"] }
image = { workspace = true, default-features = false, features = ["png"] }
wgpu = {  workspace = true, optional = true }
serialport = { workspace = true }
regex = "1.10"
log = "0.4"
web-time.workspace = true
strum = "0.25"
strum_macros = "0.25"
toml.workspace = true
anyhow.workspace = true

egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
egui_extras.workspace = true
egui_plot.workspace = true

egui-notify = { git = "https://github.com/dbalsom/egui-notify_martypc.git", branch = "egui_0_27_2"}

# Debug TUI interface imports
ratatui = { version = "0.26.2", default-features = false }
egui_ratatui = "0.0.9"
#egui_ratatui = { git = "https://github.com/dbalsom/egui_ratatui_martypc.git", branch = "resize_fix"}
serde = { workspace = true, features = ["derive"] }
lazy_static = "1.4.0"
