[package]
name = "marty_egui"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "marty_egui"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
frontend_common = { path = "../frontend_common" }
marty_common = { path = "../../common" }
marty_core = { path = "../../../core", default-features = false }
videocard_renderer = { path = "../videocard_renderer" }
bytemuck = { workspace=true, features = ["derive"] }
image = { workspace = true, default-features = false, features = ["png"] }
web-time.workspace = true
serde = { workspace = true, features = ["derive"] }
strum.workspace = true
strum_macros.workspace = true
toml.workspace = true
anyhow.workspace = true
fluxfox.workspace = true
crossbeam-channel.workspace = true
crossbeam-utils.workspace = true
lazy_static = "1.4"
regex = "1.10"
log = "0.4"
tiny-skia = "0.11"

egui = { workspace = true, default-features = false, features = ["serde"] }
egui_extras.workspace = true
egui_plot.workspace = true

#egui-file-dialog = "0.6.1"
#egui_file = {  git = "https://github.com/Barugon/egui_file", rev="f08fe3f9ea22de0312d062384544c5d2af5b76a1" }
#egui-notify = { git = "https://github.com/dbalsom/egui-notify_martypc.git", branch = "egui_0_28_1"}
egui_file = "0.20.0"
egui-notify = "0.18"

# Optional dependencies
# ---------------------------------------------------------------------------------------------------------------------
wgpu = {  workspace = true, optional = true }
serialport = { workspace = true, optional = true }

[features]
use_serialport = ["serialport"]