[package]
name = "marty_egui_eframe"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "marty_egui_eframe"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
frontend_common = { path = "../frontend_common" }
marty_egui = { path = "../marty_egui" }
log = "0.4"
web-time.workspace = true

# Optional dependencies
# ---------------------------------------------------------------------------------------------------------------------
serialport = { workspace = true, optional = true }

# EGUI dependencies
# ---------------------------------------------------------------------------------------------------------------------
egui = { workspace = true, default-features = false, features = ["serde"] }
egui_extras.workspace = true

# Optional dependencies
# ---------------------------------------------------------------------------------------------------------------------
wgpu = { workspace = true, optional = true }

[features]
use_wgpu = ["wgpu"]
use_serialport = ["dep:serialport"]