[package]
name = "marty_egui_wgpu"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "marty_egui_wgpu"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
frontend_common = { path = "../frontend_common" }
winit.workspace = true
wgpu = {  workspace = true, optional = true }

log = "0.4"
web-time.workspace = true

egui = { workspace = true, features = ["serde"] }
egui-wgpu.workspace = true
egui-winit.workspace = true
egui_extras.workspace = true

# native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serialport = { workspace = true }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]

